# Test_rep

./: CMakeLists.txt  README.md  Readme.txt  config_folder_and_run_cmake.bat  task_1.hpp  task_2.hpp  task_3.hpp  task_5.hpp  task_6.hpp  task_8.hpp
test_sq/: CMakeLists.txt  Task1.1.cpp  square_library.cpp  square_library.h
test_sq/tests/: CMakelists.txt  tests.cpp
